frame/support/test/tests/pallet_ui/step_003.stderr
error: Missing `#[pallet::config]`
 --> $DIR/step_003.rs:2:1
  |
2 | mod pallet {
  | ^^^
